add reload for web api
